Updated index.html with a new line

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 
 <body>
     <h1>hello world</h1>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corrupti tenetur impedit odit perferendis aliquid!
+        Sapiente impedit incidunt repellat, corrupti architecto, consequuntur commodi repudiandae, at facilis pariatur
+        perferendis autem? Itaque, corrupti!</p>
 </body>
 
 </html>
