--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
     <h1>hello world</h1>
+    <div><img src="img_hello_world.jpg" alt="Hello World from Space" style="width:100%;max-width:960px"></div>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corrupti tenetur impedit odit perferendis aliquid!
         Sapiente impedit incidunt repellat, corrupti architecto, consequuntur commodi repudiandae, at facilis pariatur
         perferendis autem? Itaque, corrupti!</p>
