changes in index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>hello world</h1>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corrupti tenetur impedit odit perferendis aliquid!
         Sapiente impedit incidunt repellat, corrupti architecto, consequuntur commodi repudiandae, at facilis pariatur
-        perferendis autem? Itaque, corrupti!</p>
+        perferendis autem? Itaque, cogrrupti!</p>
     <h1>welcOME</h1>
 </body>
 
