--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         Sapiente impedit incidunt repellat, corrupti architecto, consequuntur commodi repudiandae, at facilis pariatur
         perferendis autem? Itaque, cogrrupti!</p>
     <h1>welcOME</h1>
+    <h2>If you want to get the best out of man you must look for the best that is in him.</h2>
 </body>
 
 </html>
