--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <h1>welcOME</h1>
     <h2>If you want to get the best out of man you must look for the best that is in him.</h2>
     <h3>hello world</h3>
+    <h1>gjfjj</h1>
+    <h4>kgr</h4>
 </body>
 
 </html>
