some changes in index.html

--- a/index.html
+++ b/index.html
@@ -13,17 +13,18 @@
     <div><img src="img_hello_world.jpg" alt="Hello World from Space" style="width:100%;max-width:960px"></div>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corrupti tenetur impedit odit perferendis aliquid!
         Sapiente impedit incidunt repellat, corrupti architecto, consequuntur commodi repudiandae, at facilis pariatur
-<<<<<<< HEAD
-        perferendis autem? Itaque, cogrrupti!</p>
-    <h1>welcOME</h1>
-    <h2>If you want to get the best out of man you must look for the best that is in him.</h2>
-    <h3>hello world</h3>
-    <h1>gjfjj</h1>
-    <h4>Dr Homi Bhabha</h4>
-=======
-        perferendis autem? Itaque, corrupti!</p>
+        <<<<<<< HEAD perferendis autem? Itaque, cogrrupti!</p>
+            <h1>welcOME</h1>
+            <h2>If you want to get the best out of man you must look for the best that is in him.</h2>
+            <h3>hello world</h3>
+            <h1>gjfjj</h1>
+            <h4>Dr Homi Bhabha</h4>
+            =======
+            perferendis autem? Itaque, corrupti!
+    </p>
     <p>Dr Vikram Sarabhai</p>
->>>>>>> hello-world-images
+    >>>>>>> hello-world-images
+    <h1>APJ Abdul Kalam</h1>
 </body>
 
 </html>
