--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <p>Dr Vikram Sarabhai</p>
     >>>>>>> hello-world-images
     <h1>APJ Abdul Kalam</h1>
+    <p>He was known as "MISSILE MAN"</p>
 </body>
 
 </html>
